sbo/fortune-sidecar-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fortune-service
  name: fortune-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortune-service
  strategy: {}
  template:
    metadata:
      labels:
        app: fortune-service
    spec:
      imagePullSecrets: 
        - name: imagereg-secret
      containers:
      - image: harbor.apps.cf.tanzutime.com/dekt-apps/fortune-service:0.0.1-SNAPSHOT
        name: fortune-service
        resources: {}
      - image: harbor.apps.cf.tanzutime.com/dekt-apps/spring-boot-observer-sidecar:0.0.1-SNAPSHOT
        name: sidecar
        resources: {}        
---
apiVersion: v1
kind: Service
metadata:
  name: fortune-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: fortune-service
