sbo/sbo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: sbo-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec: 
  rules: 
    - host: sbo.{HOST_NAME}
      http: 
        paths: 
          - backend: 
              serviceName: spring-boot-observer-server
              servicePort: 5112
